--- a/src/Component/Column/Column.scss
+++ b/src/Component/Column/Column.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     outline: 2px solid grey;
     margin-left: 1vw;
-    max-width: 35vw;
+    min-width: 25vw;
     background: #f0f0f0;
 
     .column__header {
