updated logic for CRUD task, columns

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -31,7 +31,7 @@
         flex-direction: column;
         margin: 0 5px;
 
-        .column__ticket {
+        .column__task {
             display: flex;
             align-items: center;
             text-align: center;
